<resources>
    <string name="app_name">Campus Guide</string>
    <string name="loy_campus">LOY</string>
    <string name="sgw_campus">SGW</string>
    <string name="choose_direction_calendar_last">use last event</string>
    <string name="choose_direction_calendar_next">use next event</string>
    <string name="choose_direction_search">search for location</string>
    <string name="choose_direction_current">use current location</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="directions">Directions</string>
    <string name="campus_map">Campus Map</string>
    <string name="poi">Near Me</string>
    <string name="go_here">GO HERE</string>
    <string name="start_location">Start Location</string>
    <string name="end_location">End Location</string>
    <string name="choose_indoor_accessibility">Choose indoor accessibility</string>
    <string name="cant_use_escalators">Can\'t use escalators</string>
    <string name="cant_use_elevators">Can\'t use elevators</string>
    <string name="cant_use_stairs">Can\'t use stairs</string>
    <string name="login_to_an_account">Login to an account</string>
    <string name="choose_your_calendar">Choose your calendar</string>
    <string name="steps_and_more">Steps and More</string>
    <string name="start">Start</string>
    <string name="km">(- km)</string>
    <string name="min">- min</string>
    <string name="dash">-</string>
    <string name="cafes">Cafés</string>
    <string name="restaurant">Restaurant</string>
    <string name="shopping">Shopping</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="sgw_campus_name">SGW Campus</string>
    <string name="step_instruction_address">via Blvd Maisonneuve 0 and Rue Guy</string>
    <string name="steps">Steps</string>
    <string name="_4_min">4 min</string>
    <string name="_350_m">(350 m)</string>
    <string name="show_map">Show Map</string>
    <string name="location">Location</string>
    <string name="result_line_2">Result line 2</string>
    <string name="result_line_1">Result line 1</string>
    <string name="some_text">Some text</string>
>>>>>>> a5e952646a712700659785f260134daacbab11be
</resources>
