<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/cafe"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/cafes"
        android:textColor="#F0F0F0" />

    <Button
        android:id="@+id/restaurant"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/restaurant"
        android:textColor="#F0F0F0" />

    <Button
        android:id="@+id/shopping"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/shopping"
        android:textColor="#F0F0F0" />

    <Button
        android:id="@+id/pharmacy"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/pharmacies"
        android:textColor="#F0F0F0" />

</LinearLayout>