<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/selectAccessibilitiesLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:visibility="visible">

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/escalators_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cant_use_escalators"/>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/elevators_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cant_use_elevators"/>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/stairs_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cant_use_stairs"/>

</LinearLayout>